--- a/projectHtlp/Base.lproj/Main.storyboard
+++ b/projectHtlp/Base.lproj/Main.storyboard
@@ -348,6 +348,6 @@
         <image name="fond" width="800" height="600"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="3nf-AZ-zQ9"/>
+        <segue reference="79c-iA-0VM"/>
     </inferredMetricsTieBreakers>
 </document>
